# Python-Algorithms-Structures

./: .gitignore  LICENSE  Makefile  README.md  binary_search.py  pyproject.toml
.github/workflows/: tests.yml
graph/: dfs.py  input_adjacency_matrix.py
recursion/: max.py  sum.py
sortings/: choice.py  quick.py
src/algorithms/graph/input/: adjacency_list.py
src/algorithms/recursion/: factorial.py
src/array/: binary_search_boundaries.py  shift_array_right_by_k.py
src/graph/: dfs.py  width_traversal.py
src/recursion/: count_elements.py
src/structures/: singly_linked_list.py
tests/algorithms/array/: test_binary_search.py  test_binary_search_boundaries.py  test_shift_array_right_by_k.py
tests/algorithms/graph/: test_dfs.py
tests/algorithms/graph/input/: test_adjacency_list.py  test_adjacency_matrix.py
tests/algorithms/recursion/: test_factorial.py
tests/algorithms/sortings/: test_choice.py  test_quick.py
tests/array/: test_binary_search.py  test_binary_search_boundaries.py  test_shift_array_right_by_k.py
tests/graph/: test_adjacency_list.py  test_dfs.py
tests/graph/input/: test_adjacency_list.py  test_adjacency_matrix.py
tests/recursion/: test_factorial.py
tests/sortings/: test_choice.py  test_quick.py
tests/structures/: test_singly_linked_list.py
tests/structures/singly_linked_list/: test_get_operations.py  test_insert_operations.py  test_node.py  test_remove_operations.py  test_singly_linked_list.py
