[tool.poetry]
name = "Algorithms"
version = "0.1.0"
description = ""
authors = ["DiSkills"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^0.991"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
